# borrowborne

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: make_cjk_subset.py
content/: curses.ron
content/chapters/: 01-newbie-village.ron  02-ownership-forest.ron  03-enum-town.ron  04-result-swamp.ron  05-trait-guild.ron  06-iterator-library.ron  07-lifetime-shrine.ron  08-concurrency-keep.ron  09-algorithm-dungeon.ron
crates/borrowborne-app/: Cargo.toml  index.html
crates/borrowborne-app/src/: audio.rs  fonts.rs  lib.rs  main.rs  theme.rs
crates/borrowborne-app/src/app/: chrome.rs  journal.rs  map.rs  mod.rs  puzzle.rs  verdict_view.rs
crates/borrowborne-app/src/fx/: combat.rs  mod.rs  particles.rs  shake.rs
crates/borrowborne-app/src/i18n/: en.rs  ja.rs  mod.rs  zh_hant.rs
crates/borrowborne-app/tests/: font_coverage.rs  layout_probe.rs
crates/borrowborne-core/: Cargo.toml
crates/borrowborne-core/src/: constants.rs  curse.rs  error.rs  lib.rs  progress.rs  verdict.rs
crates/borrowborne-core/src/curriculum/: concept.rs  loader.rs  mod.rs
crates/borrowborne-core/tests/: curriculum_tests.rs  curse_tests.rs  progress_tests.rs
crates/borrowborne-runner/: Cargo.toml
crates/borrowborne-runner/src/: harness.rs  lib.rs  playground.rs  rustc_local.rs
crates/borrowborne-runner/tests/: content_gate.rs  playground_tests.rs  runner_selftest.rs
docs/: ARCHITECTURE.md
