[workspace]
resolver = "2"
members = [
    "crates/borrowborne-core",
    "crates/borrowborne-runner",
    "crates/borrowborne-app",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Borrowborne contributors"]
repository = "https://github.com/ragnarokmin0714/borrowborne"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
thiserror = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
