[package]
name = "borrowborne-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "borrowborne_app"
path = "src/lib.rs"

[[bin]]
name = "borrowborne"
path = "src/main.rs"

[dependencies]
borrowborne-core = { path = "../borrowborne-core" }
borrowborne-runner = { path = "../borrowborne-runner" }
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence", # remember language / progress across restarts
] }
egui = "0.28"
serde = { workspace = true }
