[package]
name = "borrowborne-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "borrowborne_app"
path = "src/lib.rs"

[[bin]]
name = "borrowborne"
path = "src/main.rs"

[dependencies]
borrowborne-core = { path = "../borrowborne-core" }
borrowborne-runner = { path = "../borrowborne-runner" }
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence", # remember language / progress across restarts
] }
egui = "0.28"
# Syntax highlighting for the spell editor. The built-in simple
# highlighter (no syntect feature) knows Rust and keeps wasm small.
egui_extras = { version = "0.28", default-features = false, features = ["serde"] }
# SFX playback. No codec features: every sound is synthesized in
# audio.rs, so only the cpal device backend is needed.
kira = { version = "0.12", default-features = false, features = ["cpal"] }
serde = { workspace = true }

# Web build (trunk + GitHub Pages): the browser fetches the Rust
# Playground as the judge, since no local rustc exists on wasm.
[target.'cfg(target_arch = "wasm32")'.dependencies]
ehttp = "0.5"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
# Parses the embedded subset font to prove it covers the i18n strings.
ttf-parser = "0.21"
